# cpp-to-c-transpiler

./: .gitignore  .gitmodules  ACSLAxiomaticBuilderTest[1]_include.cmake  ACSLFunctionAnnotatorTest[1]_include.cmake  ACSLGeneratorTest[1]_include.cmake  ACSLLoopAnnotatorTest[1]_include.cmake  ACSLMemoryPredicateAnalyzerTest[1]_include.cmake  ACSLStatementAnnotatorTest[1]_include.cmake  ANALYSIS-C_TranslationUnit-Code-Examples.md  ANALYSIS-C_TranslationUnit-Diagrams.md  ANALYSIS-C_TranslationUnit-INDEX.md  ANALYSIS-C_TranslationUnit-QUICK-REFERENCE.md  ANALYSIS-C_TranslationUnit.md  ANALYSIS_REPORT.txt  ANALYSIS_SUMMARY-StaticMemberTranslator.txt  ARCHITECTURAL_LIMITATION_VIRTUAL_INHERITANCE.md  ActionTableGeneratorTest[1]_include.cmake  AdvancedTemplateIntegrationTest[1]_include.cmake  ArraySubscriptExprHandlerDispatcherTest[1]_include.cmake  ArraySubscriptExprHandlerDispatcherTest[1]_tests.cmake  AssumeAttributeHandlerTest[1]_include.cmake  AutoDecayCopyTranslatorTest[1]_include.cmake  BATCH-1-MIGRATION-REPORT.md  BUGFIXES_BUG21-22.md  BUGFIXES_BUG24-25.md  BUGFIXES_FINAL_SESSION.md  BUGFIXES_PHASE35-02.md  BUILD_SETUP.md  BaseOffsetCalculatorTest[1]_include.cmake  BinaryOperatorHandlerDispatcherTest[1]_include.cmake  CFGAnalysisTest[1]_include.cmake  CICD_FIX_REPORT.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_RESOLUTION_SUMMARY.md  CLAUDE.md  CLEANUP_VERIFICATION.txt  CMAKE_CLEANUP_SUMMARY.md  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt.bak3  (+305 more)
.prompts/076-source-location-mapping-research/: CMakeLists.txt  SUMMARY.md  experiments.cpp  source-location-mapping-research.md
.prompts/076-source-location-mapping-research/completed/: 076-source-location-mapping-research.md
benchmarks/: BENCHMARK_CI.md  BENCHMARK_REPORT.docx  BENCHMARK_REPORT.md  CMakeLists.txt  README.md  benchmark_ast_traversal.cpp  benchmark_code_generation.cpp  benchmark_e2e_transpilation.cpp  benchmark_memory_usage.cpp  benchmark_name_mangling.cpp  benchmark_virtual_functions.cpp  compare_benchmarks.py  compare_results.sh  coroutine_benchmark.c  coroutine_benchmark.cpp  exception_benchmark.c  exception_benchmark_native.cpp  rtti_benchmark.c  rtti_benchmark.cpp  run_benchmarks.sh  virtual_benchmark.c  virtual_benchmark.cpp
examples/embedded-app/: CMakeLists.txt  README.md
examples/embedded-app/src/: main.cpp
examples/inline-mode/: .gitignore  CMakeLists.txt  README.md  expected_output.txt
examples/library-mode/: CMakeLists.txt  README.md  simple_example.cpp
examples/safety-critical/: CMakeLists.txt  README.md
examples/safety-critical/src/: main.cpp
runtime/: CMAKE_OPTIONS.md  CMakeLists.txt  exception_runtime.cpp  exception_runtime.h  memory_runtime.h  rtti_runtime.c  rtti_runtime.h  vinherit_runtime.h
tests/batch2_gtest/: CMakeLists.txt  cmake_test_discovery_226be6b868.json
tests/gtest/acsl/: CMakeLists.txt  CMakeLists.txt.backup  cmake_test_discovery_659ba22c36.json  cmake_test_discovery_986712a300.json  cmake_test_discovery_9aeeb44e43.json  cmake_test_discovery_b66d25f1a8.json  cmake_test_discovery_c6c396e387.json  cmake_test_discovery_e68ef0e0af.json  cmake_test_discovery_e6bf95304c.json  cmake_test_discovery_fda6c73ddd.json
tests/gtest/runtime_optimization/: CMakeLists.txt  cmake_test_discovery_066215c0c6.json  cmake_test_discovery_5e9f917b44.json  cmake_test_discovery_abbe7be041.json  cmake_test_discovery_deb5921a59.json
tests/helpers/: CMakeLists.txt  RuntimeTestHarness.cpp  RuntimeTestHarness.h  UnitTestHelper.h
tests/integration/: CMakeLists.txt  ClassesIntegrationTest[1]_include.cmake  EdgeCasesTest.cpp  EnumIntegrationTest[1]_include.cmake  ErrorHandlingTest.cpp  ErrorHandlingTestFixture.h  ErrorHandlingTest_gtest.cpp  FeatureCombinationTest.cpp  FeatureInteractionTest.cpp  FramaCEVATests.cpp  FramaCWPTests.cpp  FunctionTranslationIntegrationTest.cpp  FunctionTranslationIntegrationTest.cpp.bak10  FunctionTranslationIntegrationTest.cpp.bak16  FunctionTranslationIntegrationTest.cpp.bak9  Makefile  MoveSemanticIntegrationTest.cpp  MoveSemanticIntegrationTestFixture.h  MultipleInheritanceIntegrationTest[1]_include.cmake  MultipleInheritanceIntegrationTest[1]_tests.cmake  OperatorIntegrationTest.cpp  Phase61ModuleRejectionTest_gtest.cpp  PointersIntegrationTest[1]_include.cmake  README.md  StructsIntegrationTest[1]_include.cmake  VirtualMethodsIntegrationTest[1]_include.cmake  VirtualMethodsIntegrationTest[1]_tests.cmake  cmake_test_discovery_2b7fec1ad8.json  move_semantics_integration_test.cpp  test_edge_cases[1]_include.cmake  test_error_handling[1]_include.cmake  test_error_handling_gtest[1]_include.cmake  test_feature_combination[1]_include.cmake  test_feature_interaction[1]_include.cmake  test_move_semantic_integration[1]_include.cmake
tests/integration/advanced/: class_invariants.cpp
tests/integration/basic/: array_fill.cpp  pointer_validation.cpp
tests/integration/comparison-operators/: CMakeLists.txt  ComparisonOperatorsIntegrationTest.cpp  INTEGRATION_TEST_REPORT.md  QUICK_REFERENCE.md  README.md  TEST_SUMMARY.txt
tests/integration/cpp23/: 01_templates_inheritance.cpp  03_scoped_enums_namespaces.cpp  04_operator_overloading_templates.cpp  integration_test_output.txt  run_integration_tests.sh  test_results.txt
tests/integration/handlers/: ClassesIntegrationTest.cpp  ControlFlowIntegrationTest.cpp  EnumIntegrationTest.cpp  GlobalVariablesIntegrationTest.cpp  HandlerIntegrationTest.cpp  MultipleInheritanceIntegrationTest.cpp  PointersIntegrationTest.cpp  StaticMemberIntegrationTest.cpp  StaticMemberIntegrationTest.cpp.bak11  StaticMemberIntegrationTest.cpp.bak15  StructsIntegrationTest.cpp  (+3 more)
tests/virtual_inheritance_tests/: CMakeLists.txt  VtableGeneratorTest.cpp
wasm/: CMakeLists.txt  README.md  STATUS.md
wasm/bindings/: TranspilerAPIStub.cpp  full.cpp  minimal.cpp
wasm/cloudflare-worker/: package.json  tsconfig.json  wrangler.toml
wasm/docs/: API.md  BUILDING.md
wasm/glue/: package-lock.json  package.json  tsconfig.build.json
wasm/scripts/: build-full.sh  build-minimal.sh  size-check.sh
wasm/test/: verify-transpiler.test.js
(+2160 files in other folders)
